--- a/src/openhdwebui.client/src/app/files/files.component.html
+++ b/src/openhdwebui.client/src/app/files/files.component.html
@@ -41,8 +41,8 @@
 
 <!-- File Display Section -->
 <div class="album py-5 bg-light" *ngIf="files.length">
-  <div class="container">
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+  <div class="container-fluid container-xl px-4">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 row-cols-xxl-5 g-4">
       <div class="col" *ngFor="let file of files">
         <div class="card shadow-sm">
           <video
