--- a/src/openhdwebui.client/src/styles.css
+++ b/src/openhdwebui.client/src/styles.css
@@ -80,8 +80,12 @@ body.dark-theme {
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: block;
+  width: 100%;
+  min-height: 100vh;
+}
+
+main > * {
+  width: 100%;
 }
 
