Add docs fallback to local mirror

--- a/src/openhdwebui.client/src/app/frontpage/frontpage.component.html
+++ b/src/openhdwebui.client/src/app/frontpage/frontpage.component.html
@@ -14,7 +14,7 @@
   </p>
 
   <div class="cta">
-    <a routerLink="https://openhdfpv.org/introduction" class="btn btn--ghost">Docs</a>
+    <a [href]="docLink" class="btn btn--ghost" target="_blank" rel="noopener">Docs</a>
     <button class="btn btn--ghost" (click)="toggleLogin()">Login</button>
   </div>
 
